--- a/src/components/Cabecalho/Cabecalho.module.css
+++ b/src/components/Cabecalho/Cabecalho.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100px;
 
-    background-color: #005f83;
+    background-color: var(--cor-primaria);
 
     display: flex;
     justify-content: space-between;
@@ -10,15 +10,14 @@
 }
 
 .imgLogo,
-.imgLogo img{
+.imgLogo img {
     height: 100%;
 }
-
-
 
 .cabecalho a {
     color: var(--branco-suave);
     margin-right: 5%;
+
     font-size: 1.5rem;
     text-decoration: none;
 }
